--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,33 +3,65 @@ body{
 }
 
 nav{
-  height: 5rem;
+  background-color: #000;
 }
 
 .main-buttons{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
 }
 
-.btn{
+nav .btn{
+  background-color: #fff;
+  color: #000;
+  border: none;
+  height: 5em;
+  width: 5em;
   border-radius: 50%;
-  height: 4rem;
-  width: 4rem;
-  border-color: grey;
-  margin: 2rem;
-  padding: 0.4rem;
+  box-shadow: 0.25em 0.25em 1.2em grey;
+  margin: 1em;
+  margin-top: 0;
+  padding-bottom: 0.5em;
+  font-size: 0.8em;
 }
 
 #video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 600px);
-      grid-auto-rows: 500px;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+video {
+  display: flex;
+}
 
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+.invite {
+  position: absolute;
+  display: none;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%,-10%);
+  text-align: center;
+}
+
+.closeShare {
+  float: right;
+  cursor: pointer;
+}
+.invite input {
+  width: 100%;
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.invite button {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.invite a button {
+  width: 100%;
+  margin-bottom: 10px;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
