Share screen and meetingFull added, Video resolution adjusted, Meeting size set

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,15 +28,33 @@ nav .btn{
 }
 
 #video-grid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 85%;
+  overflow: hidden;
 }
 
-video {
+#other-video {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 15%;
+  height: 100%;
+}
+
+.local-video {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 0px;
+  max-width: 100%;
+  max-height: 100%;
+  float: left;
+  background: #000;
+}
+
+.one-video {
   display: flex;
-  width: 50%;
-  height: 50%;
+  justify-content: center;
+  margin: auto;
 }
 
 .invite {
