--- a/views/videocall.ejs
+++ b/views/videocall.ejs
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-
+    <div class="screenShareDiv" style="display: none"></div>
     <div id="video-grid" class=""></div>
+    <div id="other-video"></div>
 
     <div class="card invite" style="width: 20rem">
 
