--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,6 +27,42 @@ nav .btn{
   font-size: 0.8em;
 }
 
+nav .btn:hover {
+  background-color: #DDDDDD;
+}
+
+
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+.dropup-content {
+  display: none;
+  position: absolute;
+  bottom: 50px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border: 1px grey;
+  padding: 5px 0;
+  border-radius: 5px;
+}
+
+.dropup-content a {
+  color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropup-content a:hover {background-color: #ddd}
+
+.dropup:hover .dropup-content {
+  display: block;
+}
+
 #video-grid {
   width: 85%;
   overflow: hidden;
@@ -49,6 +85,7 @@ nav .btn{
   max-height: 100%;
   float: left;
   background: #000;
+  box-shadow: -0.15em 0.15em 0.5em grey;
 }
 
 .one-video {
@@ -121,6 +158,11 @@ nav .btn{
 }
 
 .closeChat {
+  float: right;
+  cursor: pointer;
+}
+
+.closeList {
   float: right;
   cursor: pointer;
 }
