--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -171,3 +171,14 @@ nav .btn:hover {
 label {
   padding: 0 20px;
 }
+
+/* breakout room */
+
+/* Annoucement */
+.annoucement-container {
+  position: absolute;
+  left: 50%;
+  bottom: 30%;
+  transform: translate(-50%, -50%);
+  height: 8rem;
+}
