--- a/views/videocall.ejs
+++ b/views/videocall.ejs
@@ -26,6 +26,13 @@
 
 <body>
 
+    <!-- <form id="uploadForm" enctype="multipart/form-data" action= "" method="post">
+      <input type="text" name="meetId" value="<%= id %>">
+     <input type="file" name="myfile" class="fileBox"/><br/><br/>
+     <input type="submit" value="Upload Image" name="submit"><br/><br/>
+     <span id="status"></span>
+    </form> -->
+
     <div class="screenShareDiv" style="display: none"></div>
 
     <div id="video-grid" class=""></div>
@@ -72,9 +79,83 @@
       <form class="chat-form" action="index.html" method="post">
       <div class="input-group mb-3 input-group-sm send-container">
         <input type="text" class="form-control message-input" placeholder="Message" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <button type="button" class="input-group-text" id="basic-addon1" ><span class="material-icons addEmoji">sentiment_satisfied_alt</span></button>
           <button type="submit" name="sendMessage" class="btn btn-primary"><span class="material-icons">send</span></button>
       </div>
       </form>
+    </div>
+    <div class="card-body emoji-card" style="display: none">
+      <div class="emoji">
+        <span class="emojiBtn" >&#128514;</span>
+        <span class="emojiBtn" >&#128512;</span>
+        <span class="emojiBtn" >&#128513;</span>
+        <span class="emojiBtn" >&#128515;</span>
+        <span class="emojiBtn" >&#128516;</span>
+        <span class="emojiBtn" >&#128517;</span>
+        <span class="emojiBtn" >&#128518;</span>
+        <span class="emojiBtn" >&#128519;</span>
+        <span class="emojiBtn" >&#128520;</span>
+        <span class="emojiBtn" >&#128521;</span>
+        <span class="emojiBtn" >&#128522;</span>
+        <span class="emojiBtn" >&#128523;</span>
+        <span class="emojiBtn" >&#128524;</span>
+        <span class="emojiBtn" >&#128525;</span>
+        <span class="emojiBtn" >&#128526;</span>
+        <span class="emojiBtn" >&#128527;</span>
+        <span class="emojiBtn" >&#128528;</span>
+        <span class="emojiBtn" >&#128529;</span>
+        <span class="emojiBtn" >&#128530;</span>
+        <span class="emojiBtn" >&#128531;</span>
+        <span class="emojiBtn" >&#128532;</span>
+        <span class="emojiBtn" >&#128533;</span>
+        <span class="emojiBtn" >&#128534;</span>
+        <span class="emojiBtn" >&#128535;</span>
+        <span class="emojiBtn" >&#128536;</span>
+        <span class="emojiBtn" >&#128537;</span>
+        <span class="emojiBtn" >&#128538;</span>
+        <span class="emojiBtn" >&#128539;</span>
+        <span class="emojiBtn" >&#128540;</span>
+        <span class="emojiBtn" >&#128541;</span>
+        <span class="emojiBtn" >&#128542;</span>
+        <span class="emojiBtn" >&#128543;</span>
+        <span class="emojiBtn" >&#128544;</span>
+        <span class="emojiBtn" >&#128545;</span>
+        <span class="emojiBtn" >&#128546;</span>
+        <span class="emojiBtn" >&#128547;</span>
+        <span class="emojiBtn" >&#128548;</span>
+        <span class="emojiBtn" >&#128549;</span>
+        <span class="emojiBtn" >&#128550;</span>
+        <span class="emojiBtn" >&#128551;</span>
+        <span class="emojiBtn" >&#128552;</span>
+        <span class="emojiBtn" >&#128553;</span>
+        <span class="emojiBtn" >&#128554;</span>
+        <span class="emojiBtn" >&#128555;</span>
+        <span class="emojiBtn" >&#128556;</span>
+        <span class="emojiBtn" >&#128557;</span>
+        <span class="emojiBtn" >&#128558;</span>
+        <span class="emojiBtn" >&#128559;</span>
+        <span class="emojiBtn" >&#128560;</span>
+        <span class="emojiBtn" >&#128561;</span>
+        <span class="emojiBtn" >&#128562;</span>
+        <span class="emojiBtn" >&#128563;</span>
+        <span class="emojiBtn" >&#128564;</span>
+        <span class="emojiBtn" >&#128565;</span>
+        <span class="emojiBtn" >&#128566;</span>
+        <span class="emojiBtn" >&#128567;</span>
+        <span class="emojiBtn" >&#128568;</span>
+        <span class="emojiBtn" >&#128569;</span>
+        <span class="emojiBtn" >&#128570;</span>
+        <span class="emojiBtn" >&#128571;</span>
+        <span class="emojiBtn" >&#128572;</span>
+        <span class="emojiBtn" >&#128573;</span>
+        <span class="emojiBtn" >&#128574;</span>
+        <span class="emojiBtn" >&#128575;</span>
+        <span class="emojiBtn" >&#128576;</span>
+        <span class="emojiBtn" >&#128577;</span>
+        <span class="emojiBtn" >&#128578;</span>
+        <span class="emojiBtn" >&#128579;</span>
+        <span class="emojiBtn" >&#128580;</span>
+      </div>
     </div>
   </div>
 
