--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Microsoft Teams Clone</title>
+    <title>LivMeet</title>
 
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <style>
+      nav{
+        float: right;
+      }
+      nav a {
+      	color: #aa80f9;
+      }
+      nav a:hover {
+	      color:#444b8c;
+      }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -1700,11 +1709,14 @@
 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
-
+    <nav>
+      <a class="navbar-brand chatLink" href="">Chat</a>
+      <a class="navbar-brand" href="/login">Login</a>
+    </nav>
   </header>
 
   <main class="px-3">
-    <h1 style="color: #444B8C">Meeting Application</h1>
+    <h1 style="color: #444B8C">LivMeet</h1>
     <br>
     <br>
     <br>
@@ -1712,7 +1724,7 @@
       <div style="margin: auto">
         <p class="lead">Join a Meeting</p>
         <div>
-          <form class="form1" action="/joiningMeeting" method="post">
+          <form class="form1" action="/joiningMeeting" method="POST">
             <div class="input-group mb-3">
               <input type="text" class="form-control" placeholder="Enter Meeting ID" name="link">
               <input type="text" value="" style="display: none" class="newMeetingName">
@@ -1747,37 +1759,13 @@
   </footer>
 </div>
 
-
-<!-- <script type="text/javascript">
-
-      document.querySelector(".btn").onclick = (e) => {
-      e.preventDefault();
-      document.querySelector(".card").style.display = "block";
-      document.querySelector(".card-body button").onclick = () => {
-        var x = document.querySelector(".card-body .nameTag").value;
-        document.querySelector(".newMeetingName").value = x;
-        if(x.trim()){
-          document.querySelector(".form2").submit();
-          e.returnValue = true;
-        }
-      }
-    }
-
-      document.querySelector("#basic-addon1").onclick = (e) => {
-      e.preventDefault();
-      document.querySelector(".card").style.display = "block";
-      document.querySelector(".card-body button").onclick = () => {
-        var x = document.querySelector(".card-body .nameTag").value;
-        document.querySelector(".meetingName").value = x;
-        if(x.trim()){
-          document.querySelector(".form1").submit();
-          e.returnValue = true;
-        }
-      }
-    }
-
-</script> -->
-
-
+<script type="text/javascript">
+  var x = window.location.pathname;
+  if(x == '/'){
+    document.querySelector(".chatLink").href = "/login";
+  }else{
+    document.querySelector(".chatLink").href = "/chat/" + window.location.pathname.split('/')[2];
+  }
+</script>
   </body>
 </html>
