--- a/views/videocall.ejs
+++ b/views/videocall.ejs
@@ -8,8 +8,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
   <script>
     const url = "<%= id %>" ;
@@ -21,17 +19,10 @@
   </script>
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <title>Microsoft Teams Clone</title>
+  <title>LivMeet</title>
 </head>
 
 <body>
-
-    <!-- <form id="uploadForm" enctype="multipart/form-data" action= "" method="post">
-      <input type="text" name="meetId" value="<%= id %>">
-     <input type="file" name="myfile" class="fileBox"/><br/><br/>
-     <input type="submit" value="Upload Image" name="submit"><br/><br/>
-     <span id="status"></span>
-    </form> -->
 
     <div class="screenShareDiv" style="display: none"></div>
 
